added firebase and almost all functionality

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ body {
 #brand,
 #new-item,
 #list-items {
-  color: #fff; }
+  color: #fbcb6a; }
 
 .main-container body {
   background-color: #4d8066; }
